--- a/BugFind/html5/bugplay.html
+++ b/BugFind/html5/bugplay.html
@@ -4,104 +4,233 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="/styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="styles.css">
     <title>BugFind</title>
   </head>
   <body>
-    <div class="conteiner">
-        <span class="logo-text">BugFind</span>
-        <span class="logo-text"> </span><br/></SPAN>
-    </div>
-
-    <div class="container-dos">
-        <span class="cortador">Cortador</span>
-        <span class="cortador">
-        </span><br/></SPAN>
-    </div>
-
-    <img class="img-ci_1" src="/image/ci_1.png" />
-    <div style="position:absolute;top:5.25in;left:7.46in;width:0.78in;line-height:0.08in;">
-        <span class="programador">PROGRAMADOR</span>
-        <span class="programador"> </span><br/>
-        </SPAN>
-    </div>
-
-    <div class="nota">
-        <span class="nota-text">NOTA</span>
-        <span class="nota-text"> </span><br/>
-    </SPAN>
-    </div>
-
-    <div class="text-pedro">
-        <span class="pedro">PEDRO</span>
-        <span class="pedro"> </span><br/>
-    </SPAN>
-    </div>
-
-    <img class="img-ci_2" src="image/ci_2.png" />
-    <img class="img-ci_3" src="image/ci_3.png" />
-    <div class="text-juan">
-        <span class="juan">JUAN</span>
-        <span class="juan"> </span><br/>
-        </SPAN>
-    </div>
-
-    <img class="img-ci_4" src="image/ci_4.png" />
-    <img class="img-ci_5" src="image/ci_5.png" />
-    <div class="text-carlos;">
-      <span class="carlos">CARLOS</span>
-      <span class="carlos"> </span><br/>
-      </SPAN>
-    </div>
-
-    <img class="img-ci_6" src="image/ci_6.png" />
-    <div class="text-juanita;">
-      <span class="juanita">JUANITA</span>
-      <span class="juanita"> </span><br/>
-      </SPAN>
-    </div>
-
-    <img class="img-ci_7" src="image/ci_7.png" />
-    <div class="text-antonio">
-      <span class="antonio">ANTONIO</span>
-      <span class="antonio"> </span><br/>
-      </SPAN>
-    </div>
-
-    <img class="img-ci_8" src="ci_8.png" />
-    <img class="img-ci_9" src="ci_9.png" />
-    <div class="text-carolina">
-        <span class="carolina">CAROLINA</span>
-        <span class="carolina"> </span><br/>
-    </SPAN>
-    </div>
-
-    <img class="img-ci_10" src="image/ci_10.png" />
-    <div class="text-manuel">
-        <span class="manuel">MANUEL</span>
-        <span class="manuel"> </span><br/></SPAN>
-      </div>
-
-    <img class="img-ci_11" src="image/ci_11.png" />
-    <img class="position:absolute;top:5.28in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_12.png" />
-    <img class="position:absolute;top:5.28in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_13.png" />
-    <img class="position:absolute;top:5.41in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_14.png" />
-    <img class="position:absolute;top:5.70in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_15.png" />
-    <img class="position:absolute;top:6.00in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_16.png" />
-    <img class="position:absolute;top:6.29in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_17.png" />
-    <img class="position:absolute;top:6.59in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_18.png" />
-    <img class="position:absolute;top:6.89in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_19.png" />
-    <img class="position:absolute;top:7.18in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_20.png" />
-    <img class="position:absolute;top:5.27in;left:8.75in;width:1.52in;height:2.22in" src="image/ci_21.png" />
-    <div class="position:absolute;top:5.25in;left:8.83in;width:0.45in;line-height:0.08in;">
-        <span class="font-style:normal;font-weight:bold;font-size:6pt;font-family:Balsamiq Sans;color:#000000">MODULO</span>
-        <span class="font-style:normal;font-weight:bold;font-size:6pt;font-family:Balsamiq Sans;color:#000000"> </span><br/>
-    </SPAN>
-    </div>
-
+    <div style="position:absolute;top:3.80in;left:3.80in;width:3.42in;line-height:0.57in;">
+      <span style="font-size:47pt;color:#009e0f">BugFind</span>
+      <span style="font-size:47pt;color:#009e0f"> </span><br/>
+  </SPAN>
+  </div>
+  
+  <div style="position:absolute;top:7.25in;left:0.38in;width:0.64in;line-height:0.19in;">
+      <span style="font-size:8pt;color:#000000">Cortador</span>
+      <span style="font-size:8pt;color:#000000">
+      </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:5.22in;left:7.30in;width:5.30in;height:4.16in" src="image/ci_1.png" />
+  <div style="position:absolute;top:5.25in;left:7.46in;width:0.78in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">PROGRAMADOR</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <div style="position:absolute;top:5.25in;left:8.31in;width:0.28in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">NOTA</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <div style="position:absolute;top:5.46in;left:7.46in;width:0.36in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">PEDRO</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:5.49in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_2.png" />
+  <img style="position:absolute;top:5.49in;left:8.33in;width:0.13in;height:0.11in" src="image/ci_3.png" />
+  <div style="position:absolute;top:5.76in;left:7.46in;width:0.28in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">JUAN</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:5.79in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_4.png" />
+  <img style="position:absolute;top:5.78in;left:8.33in;width:0.13in;height:0.11in" src="image/ci_5.png" />
+  <div style="position:absolute;top:6.05in;left:7.46in;width:0.41in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">CARLOS</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:6.09in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_6.png" />
+  <div style="position:absolute;top:6.35in;left:7.46in;width:0.42in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">JUANITA</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:6.38in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_7.png" />
+  <div style="position:absolute;top:6.65in;left:7.46in;width:0.47in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">ANTONIO</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:6.68in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_8.png" />
+  <img style="position:absolute;top:6.67in;left:8.33in;width:0.13in;height:0.11in" src="image/ci_9.png" />
+  <div style="position:absolute;top:6.94in;left:7.46in;width:0.52in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">CAROLINA</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:6.97in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_10.png" />
+  <div style="position:absolute;top:7.24in;left:7.46in;width:0.44in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">MANUEL</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:7.27in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_11.png" />
+  <img style="position:absolute;top:5.28in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_12.png" />
+  <img style="position:absolute;top:5.28in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_13.png" />
+  <img style="position:absolute;top:5.41in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_14.png" />
+  <img style="position:absolute;top:5.70in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_15.png" />
+  <img style="position:absolute;top:6.00in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_16.png" />
+  <img style="position:absolute;top:6.29in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_17.png" />
+  <img style="position:absolute;top:6.59in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_18.png" />
+  <img style="position:absolute;top:6.89in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_19.png" />
+  <img style="position:absolute;top:7.18in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_20.png" />
+  <img style="position:absolute;top:5.27in;left:8.75in;width:1.52in;height:2.22in" src="image/ci_21.png" />
+  <div style="position:absolute;top:5.25in;left:8.83in;width:0.45in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">MODULO</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <div style="position:absolute;top:5.25in;left:10.28in;width:0.28in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">NOTA</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <div style="position:absolute;top:5.46in;left:8.83in;width:0.43in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">NOMINA</span>
+      <span style="font-size:6pt;color:#000000"> </span>
+      <br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:5.49in;left:10.28in;width:0.12in;height:0.13in" src="image/ci_22.png" />
+  <img style="position:absolute;top:5.49in;left:10.30in;width:0.13in;height:0.11in" src="image/ci_23.png" />
+  <div style="position:absolute;top:5.76in;left:8.83in;width:0.71in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">FACTURACIÓN</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:5.79in;left:10.28in;width:0.12in;height:0.13in" src="image/ci_24.png" />
+  <div style="position:absolute;top:6.05in;left:8.83in;width:0.57in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">RECIBIDOS</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:6.09in;left:10.28in;width:0.12in;height:0.13in" src="image/ci_25.png" />
+  <div style="position:absolute;top:6.35in;left:8.83in;width:1.32in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">COMPROBANTE CONTABLE</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:6.38in;left:10.28in;width:0.12in;height:0.13in" src="image/ci_26.png" />
+  <div style="position:absolute;top:6.65in;left:8.83in;width:0.52in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">USUARIOS</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:6.68in;left:10.28in;width:0.12in;height:0.13in" src="image/ci_27.png" />
+  <img style="position:absolute;top:6.67in;left:10.30in;width:0.13in;height:0.11in" src="image/ci_28.png" />
+  <div style="position:absolute;top:6.94in;left:8.83in;width:0.74in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">CONTABILIDAD</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN></div>
+  <img style="position:absolute;top:6.97in;left:10.28in;width:0.12in;height:0.13in" src="image/ci_29.png" />
+  <img style="position:absolute;top:5.28in;left:10.72in;width:1.73in;height:2.20in" src="image/ci_30.png" />
+  <img style="position:absolute;top:5.28in;left:10.72in;width:1.73in;height:2.20in" src="image/ci_31.png" />
+  <img style="position:absolute;top:5.41in;left:10.72in;width:1.73in;height:2.20in" src="image/ci_32.png" />
+  <img style="position:absolute;top:5.70in;left:10.72in;width:1.73in;height:2.20in" src="image/ci_33.png" />
+  <img style="position:absolute;top:6.00in;left:10.72in;width:1.73in;height:2.20in" src="image/ci_34.png" />
+  <img style="position:absolute;top:6.29in;left:10.72in;width:1.73in;height:2.20in" src="image/ci_35.png" />
+  <img style="position:absolute;top:6.59in;left:10.72in;width:1.73in;height:2.20in" src="image/ci_36.png" />
+  <img style="position:absolute;top:6.89in;left:10.72in;width:1.73in;height:2.20in" src="image/ci_37.png" />
+  <img style="position:absolute;top:7.18in;left:10.72in;width:1.73in;height:2.20in" src="image/ci_38.png" />
+  <img style="position:absolute;top:5.27in;left:10.71in;width:1.36in;height:2.22in" src="image/ci_39.png" />
+  <div style="position:absolute;top:5.25in;left:10.79in;width:0.78in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">TIPO DE ERROR</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <div style="position:absolute;top:5.25in;left:12.08in;width:0.28in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">NOTA</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <div style="position:absolute;top:5.46in;left:10.79in;width:0.20in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">404</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:5.49in;left:12.09in;width:0.12in;height:0.13in" src="image/ci_40.png" />
+  <div style="position:absolute;top:5.76in;left:10.79in;width:0.89in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">STACK OVERFLOW</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:5.79in;left:12.09in;width:0.12in;height:0.13in" src="image/ci_41.png" />
+  <div style="position:absolute;top:6.05in;left:10.79in;width:1.21in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">MEMORY OUT OF RANGE</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN></div>
+  <img style="position:absolute;top:6.09in;left:12.09in;width:0.12in;height:0.13in" src="image/ci_42.png" />
+  <div style="position:absolute;top:6.35in;left:10.79in;width:0.74in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">NULL POINTER</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:6.38in;left:12.09in;width:0.12in;height:0.13in" src="image/ci_43.png" />
+  <div style="position:absolute;top:6.65in;left:10.79in;width:0.75in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">SYNTAX ERROR</span>
+      <span style="font-size:6pt;color:#000000"> </span><br/>
+  </SPAN>
+  </div>
+  <img style="position:absolute;top:6.68in;left:12.09in;width:0.12in;height:0.13in" src="image/ci_44.png" />
+  <img style="position:absolute;top:6.67in;left:12.10in;width:0.13in;height:0.11in" src="image/ci_45.png" />
+  <div style="position:absolute;top:6.94in;left:10.79in;width:0.92in;line-height:0.08in;">
+      <span style="font-size:6pt;color:#000000">ENCODING ERROR</span>
+      <span style="font-size:6pt;color:#000000"> </span>
+      <br/></SPAN>
+  </div>
+  <img style="position:absolute;top:6.97in;left:12.09in;width:0.12in;height:0.13in" src="image/ci_46.png" />
+  <div style="position:absolute;top:7.30in;left:2.76in;width:0.51in;line-height:0.19in;">
+      <span style="font-size:8pt;color:#000000">Baraja</span>
+      <span style="font-size:8pt;color:#000000"></span>
+      <br/></SPAN>
+  </div>
+  <img style="position:absolute;top:1.57in;left:2.76in;width:0.64in;height:0.87in" src="image/ri_1.jpeg" />
+  <img style="position:absolute;top:1.57in;left:2.07in;width:0.64in;height:0.87in" src="image/ri_2.jpeg" />
+  <img style="position:absolute;top:1.57in;left:1.37in;width:0.64in;height:0.87in" src="image/ri_3.jpeg" />
+  <img style="position:absolute;top:1.57in;left:0.66in;width:0.64in;height:0.87in" src="image/ri_4.jpeg" />
+  <img style="position:absolute;top:1.57in;left:5.93in;width:0.64in;height:0.87in" src="image/ri_5.jpeg" />
+  <img style="position:absolute;top:1.57in;left:5.24in;width:0.64in;height:0.87in" src="image/ri_6.jpeg" />
+  <img style="position:absolute;top:1.57in;left:4.54in;width:0.64in;height:0.87in" src="image/ri_7.jpeg" />
+  <img style="position:absolute;top:1.57in;left:3.83in;width:0.64in;height:0.87in" src="image/ri_8.jpeg" />
+  <img style="position:absolute;top:1.57in;left:9.10in;width:0.64in;height:0.87in" src="image/ri_9.jpeg" />
+  <img style="position:absolute;top:1.57in;left:8.41in;width:0.64in;height:0.87in" src="image/ri_10.jpeg" />
+  <img style="position:absolute;top:1.57in;left:7.71in;width:0.64in;height:0.87in" src="image/ri_11.jpeg" />
+  <img style="position:absolute;top:1.57in;left:7.00in;width:0.64in;height:0.87in" src="image/ri_12.jpeg" />
+  <img style="position:absolute;top:5.79in;left:5.85in;width:0.64in;height:0.87in" src="image/ri_13.jpeg" />
+  <img style="position:absolute;top:5.79in;left:5.16in;width:0.64in;height:0.87in" src="image/ri_14.jpeg" />
+  <img style="position:absolute;top:5.79in;left:4.46in;width:0.64in;height:0.87in" src="image/ri_15.jpeg" />
+  <img style="position:absolute;top:5.79in;left:3.75in;width:0.64in;height:0.87in" src="image/ri_16.jpeg" />
+  <img style="position:absolute;top:4.64in;left:3.75in;width:0.64in;height:0.87in" src="image/ri_17.jpeg" />
+  <img style="position:absolute;top:4.64in;left:4.80in;width:0.64in;height:0.87in" src="image/ri_18.jpeg" />
+  <img style="position:absolute;top:4.64in;left:5.78in;width:0.64in;height:0.87in" src="image/ri_19.jpeg" />
+  <img style="position:absolute;top:2.82in;left:3.75in;width:0.64in;height:0.87in" src="image/ri_20.jpeg" />
+  <img style="position:absolute;top:2.82in;left:4.80in;width:0.64in;height:0.87in" src="image/ri_21.jpeg" />
+  <img style="position:absolute;top:2.82in;left:5.80in;width:0.64in;height:0.87in" src="image/ri_22.jpeg" />
+  <img style="position:absolute;top:5.01in;left:0.17in;width:0.64in;height:0.87in" src="image/ri_23.jpeg" />
+  <img style="position:absolute;top:4.08in;left:0.17in;width:0.64in;height:0.87in" src="image/ri_24.jpeg" />
+  <img style="position:absolute;top:3.14in;left:0.17in;width:0.64in;height:0.87in" src="image/ri_25.jpeg" />
+  <img style="position:absolute;top:6.45in;left:2.64in;width:0.64in;height:0.87in" src="image/ri_26.jpeg" />
+  <img style="position:absolute;top:7.09in;left:4.63in;width:0.99in;height:0.99in" src="image/ri_27.jpeg" />
+  <img style="position:absolute;top:0.15in;left:1.46in;width:0.99in;height:0.99in" src="image/ri_28.jpeg" />
+  <img style="position:absolute;top:0.15in;left:4.72in;width:0.99in;height:0.99in" src="image/ri_29.jpeg" />
+  <img style="position:absolute;top:0.15in;left:7.80in;width:0.99in;height:0.99in" src="image/ri_30.jpeg" />
+  <img style="position:absolute;top:6.29in;left:0.15in;width:0.99in;height:0.99in" src="image/ri_31.jpeg" />
+  </div>
 
 
 
