Mejoras y documentas de la interfaz del juego bugfind

--- a/BugFind/html5/bugplay.html
+++ b/BugFind/html5/bugplay.html
@@ -11,74 +11,88 @@
     <link rel="stylesheet" href="styles.css">
     <title>BugFind</title>
   </head>
+
+
   <body>
+
+    
+    <!-- Nombre y Logo del Juego -->
     <div style="position:absolute;top:3.80in;left:3.80in;width:3.42in;line-height:0.57in;">
-      <span style="font-size:47pt;color:#009e0f">BugFind</span>
-      <span style="font-size:47pt;color:#009e0f"> </span><br/>
+      <span class="bugfind">BugFind</span>
+      <span class="bugfind"> </span><br/>
   </SPAN>
   </div>
   
+    <!-- Elemento para repatir las cartas del juego  -->
+
   <div style="position:absolute;top:7.25in;left:0.38in;width:0.64in;line-height:0.19in;">
-      <span style="font-size:8pt;color:#000000">Cortador</span>
-      <span style="font-size:8pt;color:#000000">
+      <span class="cortador">Cortador</span>
+      <span class="cortador">
       </span><br/>
   </SPAN>
   </div>
+
+  
+    <!-- Tabla de control y seguimiento de las cartas del juego -->
+
   <img style="position:absolute;top:5.22in;left:7.30in;width:5.30in;height:4.16in" src="image/ci_1.png" />
   <div style="position:absolute;top:5.25in;left:7.46in;width:0.78in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">PROGRAMADOR</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">PROGRAMADOR</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <div style="position:absolute;top:5.25in;left:8.31in;width:0.28in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">NOTA</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">NOTA</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <div style="position:absolute;top:5.46in;left:7.46in;width:0.36in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">PEDRO</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">PEDRO</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <img style="position:absolute;top:5.49in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_2.png" />
   <img style="position:absolute;top:5.49in;left:8.33in;width:0.13in;height:0.11in" src="image/ci_3.png" />
   <div style="position:absolute;top:5.76in;left:7.46in;width:0.28in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">JUAN</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">JUAN</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <img style="position:absolute;top:5.79in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_4.png" />
   <img style="position:absolute;top:5.78in;left:8.33in;width:0.13in;height:0.11in" src="image/ci_5.png" />
   <div style="position:absolute;top:6.05in;left:7.46in;width:0.41in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">CARLOS</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">CARLOS</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <img style="position:absolute;top:6.09in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_6.png" />
   <div style="position:absolute;top:6.35in;left:7.46in;width:0.42in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">JUANITA</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">JUANITA</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <img style="position:absolute;top:6.38in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_7.png" />
   <div style="position:absolute;top:6.65in;left:7.46in;width:0.47in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">ANTONIO</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">ANTONIO</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <img style="position:absolute;top:6.68in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_8.png" />
   <img style="position:absolute;top:6.67in;left:8.33in;width:0.13in;height:0.11in" src="image/ci_9.png" />
   <div style="position:absolute;top:6.94in;left:7.46in;width:0.52in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">CAROLINA</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">CAROLINA</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <img style="position:absolute;top:6.97in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_10.png" />
   <div style="position:absolute;top:7.24in;left:7.46in;width:0.44in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">MANUEL</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">MANUEL</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
+
+  
+    <!-- imagenes de la tabla de control y seguimiento de las cartas -->
   <img style="position:absolute;top:7.27in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_11.png" />
   <img style="position:absolute;top:5.28in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_12.png" />
   <img style="position:absolute;top:5.28in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_13.png" />
@@ -90,53 +104,58 @@
   <img style="position:absolute;top:6.89in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_19.png" />
   <img style="position:absolute;top:7.18in;left:8.76in;width:1.89in;height:2.20in" src="image/ci_20.png" />
   <img style="position:absolute;top:5.27in;left:8.75in;width:1.52in;height:2.22in" src="image/ci_21.png" />
+
+  <!-- Tabla de control y seguimiento de las cartas del juego -->
+ 
   <div style="position:absolute;top:5.25in;left:8.83in;width:0.45in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">MODULO</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">MODULO</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <div style="position:absolute;top:5.25in;left:10.28in;width:0.28in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">NOTA</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">NOTA</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <div style="position:absolute;top:5.46in;left:8.83in;width:0.43in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">NOMINA</span>
-      <span style="font-size:6pt;color:#000000"> </span>
+      <span class="tabla">NOMINA</span>
+      <span class="tabla"> </span>
       <br/>
   </SPAN>
   </div>
   <img style="position:absolute;top:5.49in;left:10.28in;width:0.12in;height:0.13in" src="image/ci_22.png" />
   <img style="position:absolute;top:5.49in;left:10.30in;width:0.13in;height:0.11in" src="image/ci_23.png" />
   <div style="position:absolute;top:5.76in;left:8.83in;width:0.71in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">FACTURACIÓN</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">FACTURACIÓN</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <img style="position:absolute;top:5.79in;left:10.28in;width:0.12in;height:0.13in" src="image/ci_24.png" />
   <div style="position:absolute;top:6.05in;left:8.83in;width:0.57in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">RECIBIDOS</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">RECIBIDOS</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <img style="position:absolute;top:6.09in;left:10.28in;width:0.12in;height:0.13in" src="image/ci_25.png" />
   <div style="position:absolute;top:6.35in;left:8.83in;width:1.32in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">COMPROBANTE CONTABLE</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">COMPROBANTE CONTABLE</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <img style="position:absolute;top:6.38in;left:10.28in;width:0.12in;height:0.13in" src="image/ci_26.png" />
   <div style="position:absolute;top:6.65in;left:8.83in;width:0.52in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">USUARIOS</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">USUARIOS</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <img style="position:absolute;top:6.68in;left:10.28in;width:0.12in;height:0.13in" src="image/ci_27.png" />
   <img style="position:absolute;top:6.67in;left:10.30in;width:0.13in;height:0.11in" src="image/ci_28.png" />
   <div style="position:absolute;top:6.94in;left:8.83in;width:0.74in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">CONTABILIDAD</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">CONTABILIDAD</span>
+      <span class="tabla"> </span><br/>
   </SPAN></div>
+
+  <!-- Imagenes de los avatares de los jugadores -->
   <img style="position:absolute;top:6.97in;left:10.28in;width:0.12in;height:0.13in" src="image/ci_29.png" />
   <img style="position:absolute;top:5.28in;left:10.72in;width:1.73in;height:2.20in" src="image/ci_30.png" />
   <img style="position:absolute;top:5.28in;left:10.72in;width:1.73in;height:2.20in" src="image/ci_31.png" />
@@ -148,57 +167,71 @@
   <img style="position:absolute;top:6.89in;left:10.72in;width:1.73in;height:2.20in" src="image/ci_37.png" />
   <img style="position:absolute;top:7.18in;left:10.72in;width:1.73in;height:2.20in" src="image/ci_38.png" />
   <img style="position:absolute;top:5.27in;left:10.71in;width:1.36in;height:2.22in" src="image/ci_39.png" />
+  
   <div style="position:absolute;top:5.25in;left:10.79in;width:0.78in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">TIPO DE ERROR</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">TIPO DE ERROR</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
+
   <div style="position:absolute;top:5.25in;left:12.08in;width:0.28in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">NOTA</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">NOTA</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
+
   <div style="position:absolute;top:5.46in;left:10.79in;width:0.20in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">404</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">404</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
+
   <img style="position:absolute;top:5.49in;left:12.09in;width:0.12in;height:0.13in" src="image/ci_40.png" />
   <div style="position:absolute;top:5.76in;left:10.79in;width:0.89in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">STACK OVERFLOW</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">STACK OVERFLOW</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
+
   <img style="position:absolute;top:5.79in;left:12.09in;width:0.12in;height:0.13in" src="image/ci_41.png" />
   <div style="position:absolute;top:6.05in;left:10.79in;width:1.21in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">MEMORY OUT OF RANGE</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
-  </SPAN></div>
-  <img style="position:absolute;top:6.09in;left:12.09in;width:0.12in;height:0.13in" src="image/ci_42.png" />
-  <div style="position:absolute;top:6.35in;left:10.79in;width:0.74in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">NULL POINTER</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">MEMORY OUT OF RANGE</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
+
+  <img style="position:absolute;top:6.09in;left:12.09in;width:0.12in;height:0.13in" src="image/ci_42.png" />
+  <div style="position:absolute;top:6.35in;left:10.79in;width:0.74in;line-height:0.08in;">
+      <span class="tabla">NULL POINTER</span>
+      <span class="tabla"> </span><br/>
+  </SPAN>
+  </div>
+
   <img style="position:absolute;top:6.38in;left:12.09in;width:0.12in;height:0.13in" src="image/ci_43.png" />
   <div style="position:absolute;top:6.65in;left:10.79in;width:0.75in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">SYNTAX ERROR</span>
-      <span style="font-size:6pt;color:#000000"> </span><br/>
+      <span class="tabla">SYNTAX ERROR</span>
+      <span class="tabla"> </span><br/>
   </SPAN>
   </div>
   <img style="position:absolute;top:6.68in;left:12.09in;width:0.12in;height:0.13in" src="image/ci_44.png" />
   <img style="position:absolute;top:6.67in;left:12.10in;width:0.13in;height:0.11in" src="image/ci_45.png" />
   <div style="position:absolute;top:6.94in;left:10.79in;width:0.92in;line-height:0.08in;">
-      <span style="font-size:6pt;color:#000000">ENCODING ERROR</span>
-      <span style="font-size:6pt;color:#000000"> </span>
+      <span class="tabla">ENCODING ERROR</span>
+      <span class="tabla"> </span>
       <br/></SPAN>
   </div>
+
+  <!-- Boton para elegir las cartas del juego y realizar las pregunta que se le realizara a los demas jugadores -->
+
   <img style="position:absolute;top:6.97in;left:12.09in;width:0.12in;height:0.13in" src="image/ci_46.png" />
   <div style="position:absolute;top:7.30in;left:2.76in;width:0.51in;line-height:0.19in;">
-      <span style="font-size:8pt;color:#000000">Baraja</span>
-      <span style="font-size:8pt;color:#000000"></span>
+      <span class="cortador">Baraja</span>
+      <span class="cortador"></span>
       <br/></SPAN>
   </div>
+
+  <!-- Reverso de las cartas las cuales tiene la función de ocultar el valor de las cartas -->
+
   <img style="position:absolute;top:1.57in;left:2.76in;width:0.64in;height:0.87in" src="image/ri_1.jpeg" />
   <img style="position:absolute;top:1.57in;left:2.07in;width:0.64in;height:0.87in" src="image/ri_2.jpeg" />
   <img style="position:absolute;top:1.57in;left:1.37in;width:0.64in;height:0.87in" src="image/ri_3.jpeg" />
