Paquete de Mejoras y actualización del BugFind

--- a/BugFind/crearavatar.html
+++ b/BugFind/crearavatar.html
@@ -26,22 +26,13 @@
         <div class="forminicial card-img-overlay " >
             <img style="position:absolute;top:0.15in;left:0.15in;width:6.80in;height:4.97in" src="images/ci_1.png" />
             <div style="position:absolute;top:1.04in;left:1.05in;width:1.55in;line-height:0.29in;"><span style="font-style:normal;font-weight:normal;font-size:13pt;font-family:sans-serif;color:#000000">Nombre Jugador</span><span style="font-style:normal;font-weight:normal;font-size:13pt;font-family:Balsamiq Sans;color:#000000"> </span><br/></SPAN></div>
-            <img style="position:absolute;top:3.79in;left:3.13in;width:0.87in;height:0.44in" src="images/ci_2.png" />
-            <div style="position:absolute;top:3.81in;left:3.29in;width:0.56in;line-height:0.29in;"><a href="Modelo/crearJugador.php"><span style="font-style:normal;font-weight:normal;font-size:13pt;font-family:sans-serif;color:#000000">Jugar</span></a><span style="font-style:normal;font-weight:normal;font-size:13pt;font-family:Balsamiq Sans;color:#000000"> </span><br/></SPAN></div>
+           
             <img style="position:absolute;top:1.78in;left:2.71in;width:1.72in;height:0.44in" src="images/ci_3.png" />
             <div style="position:absolute;top:1.79in;left:2.86in;width:1.41in;line-height:0.29in;"><span style="font-style:normal;font-weight:normal;font-size:13pt;font-family:sans-serif;color:#000000">Escoger Avatar</span><span style="font-style:normal;font-weight:normal;font-size:13pt;font-family:Balsamiq Sans;color:#000000"> </span><br/></SPAN></div>
-            <form action="/Modelo/crearJugador.php" method="post">
-                <input type="text" style="position:absolute;top:1.02in;left:2.80in;width:3.30in;height:0.41in" />
+            <form action="http://localhost/senasoft-main/bugfind/modelo/crearjugador.php" method="post">
+                <input type="text" style="position:absolute;top:1.02in;left:2.80in;width:3.30in;height:0.41in" name="name"/>
+                <input type="submit" value="Jugar" style="position:absolute;top:4.02in;left:2.80in;width:1.30in;height:0.41in"  />
             </form>
-            <img style="position:absolute;top:1.02in;left:2.80in;width:0.07in;height:0.07in" src="images/ci_5.png" />
-            <img style="position:absolute;top:1.02in;left:2.88in;width:3.16in;height:0.04in" src="images/ci_6.png" />
-            <img style="position:absolute;top:1.03in;left:6.03in;width:0.07in;height:0.06in" src="images/ci_7.png" />
-            <img style="position:absolute;top:1.09in;left:6.06in;width:0.04in;height:0.27in" src="images/ci_8.png" />
-            <img style="position:absolute;top:1.35in;left:6.03in;width:0.08in;height:0.07in" src="images/ci_9.png" />
-            <img style="position:absolute;top:1.38in;left:2.88in;width:3.16in;height:0.05in" src="images/ci_10.png" />
-            <img style="position:absolute;top:1.35in;left:2.80in;width:0.08in;height:0.06in" src="images/ci_11.png" />
-            <img style="position:absolute;top:1.09in;left:2.80in;width:0.04in;height:0.27in" src="images/ci_12.png" />
-            <div style="position:absolute;top:1.04in;left:2.91in;width:0.74in;line-height:0.29in;"><span style="font-style:normal;font-weight:normal;font-size:13pt;font-family:sans-serif;color:#000000">Gamer1</span><span style="font-style:normal;font-weight:normal;font-size:13pt;font-family:Balsamiq Sans;color:#000000"> </span><br/></SPAN></div>
             <img style="position:absolute;top:2.42in;left:4.94in;width:1.06in;height:1.09in" src="images/ri_1.jpeg" />
             <div style="position:absolute;top:9.27in;left:0.00in;"><a name="Crear_Avatar"><span style="font-style:normal;font-weight:normal;font-size:5pt;font-family:sans-serif;color:#000000">&nbsp</span></a></div>
             
