--- a/BugFind/html5/bugplay.html
+++ b/BugFind/html5/bugplay.html
@@ -23,11 +23,11 @@
   </SPAN>
   </div>
 
-  <div style="position:absolute;top:3.85in;left:2.50in;width:10.42in;line-height:0.57in;">
+ <!-- <div style="position:absolute;top:3.85in;left:2.50in;width:10.42in;line-height:0.57in;">
     <button class="pregunta">¿Fue ___________ en el módulo de ____________ con syntas error ______________? </button>
     <span class="pregunta"> </span><br/>
   </SPAN>
-  </div>
+  </div>-->
   
     <!-- Elemento para repatir las cartas del juego  -->
 
@@ -65,7 +65,7 @@
   </SPAN>
   </div>
   <img style="position:absolute;top:5.79in;left:8.31in;width:0.12in;height:0.13in" src="image/ci_4.png" />
-  <img style="position:absolute;top:5.78in;left:8.33in;width:0.13in;height:0.11in" src="image/ci_5.png" />
+  <img style="position:absolute;top:5.78in;left:8.33in;width:0.13in;height:0.11in" input type= "checkbox"/>
   <div style="position:absolute;top:6.05in;left:7.46in;width:0.41in;line-height:0.08in;">
       <span class="tabla">CARLOS</span>
       <span class="tabla"> </span><br/>
