--- a/BugFind/juego.html
+++ b/BugFind/juego.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="centro" >
-            <img src="images/constru.jpg" alt="enconstru" width=100%>
+            <img src="images/constru.jpg" alt="enconstru" width=900px>
         </div>
         <div class="container centro">
             Copyright &copy Equipo Senasoft SIIGO CBC 2021
